--- a/src/content/opinie/1.md
+++ b/src/content/opinie/1.md
@@ -4,6 +4,7 @@ client: EcoTech Group Sp. z o. o.
 industry: Dystrybutor rur stalowych 
 review: Długoletnia współpraca z Uneedev umożliwiła nam ekspansję na rynki europejskie. To, co wydawało się niemożliwe, stało się rzeczywistością.
 clientlogo: /content/opinie/img/logo-ecotech.png
+clientavatar: /content/opinie/img/avatar.jpg
 addate: 12.03.2024
 order: 1
 ---
