--- a/src/content/opinie/2.md
+++ b/src/content/opinie/2.md
@@ -3,7 +3,8 @@ title: Rafał Błażkowski, Właściciel
 client: CoffeeRiver
 industry: Dystrybutor kawy
 review: Co miesiąc otrzymuję kontakty do hoteli, restauracji i biur zainteresowanych naszą kawą. System działa jak w zegarku.
-clientlogo: /content/reviews/img/logo-coffe.png
+clientlogo: /content/opinie/img/logo-ecotech.png
+clientavatar: /content/opinie/img/avatar.jpg
 addate: 12.03.2024
 order: 2
 ---
